style: fix  #452 - remove gap between stars (extended version)

--- a/packages/theme/src/puik-rating-card.css
+++ b/packages/theme/src/puik-rating-card.css
@@ -6,7 +6,7 @@
 }
 
 .puik-rating-card__stars-container {
-  @apply flex gap-x-1;
+  @apply flex;
 }
 
 .puik-rating-card__average-value {
